// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateNewDashboardModal /> should match snapshot 1`] = `
<div
  aria-labelledby="customized-dialog-title"
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root Component-root-7"
    id="customized-dialog-title"
  >
    <div
      class="MuiBox-root MuiBox-root-9 Component-titleContainer-8"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        New Dashboard
      </h5>
      <button
        aria-label="close"
        class="MuiButtonBase-root MuiIconButton-root"
        data-testid="button-icon-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiDialogContent-root WithStyles(ForwardRef(DialogContent))-root-10 MuiDialogContent-dividers"
  >
    <div
      class="MuiBox-root MuiBox-root-11 makeStyles-addProjectModal-6"
    >
      <div
        class="MuiBox-root MuiBox-root-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-grid-xl-12"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
          >
            <div
              class="MuiBox-root MuiBox-root-18 makeStyles-labelContainer-16"
            >
              <label
                class="makeStyles-label-17"
                for="project-title"
              >
                Project Title
              </label>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
          >
            <div
              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-fullWidth MuiInputBase-formControl"
              >
                <input
                  aria-describedby="project-title-helper-text"
                  aria-invalid="false"
                  class="MuiInputBase-input MuiFilledInput-input makeStyles-inputField-14"
                  id="project-title"
                  type="text"
                  value="Untitled Project"
                />
              </div>
              <p
                class="MuiFormHelperText-root makeStyles-helperText-13 MuiFormHelperText-contained MuiFormHelperText-filled"
                id="project-title-helper-text"
              >
                Specify the name of the project
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-grid-xl-12"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
        >
          <div
            class="MuiBox-root MuiBox-root-19 makeStyles-labelContainer-16"
          >
            <label
              class="makeStyles-label-17"
              for="dashboard-title"
            >
              Dashboard Title
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="dashboard-title-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input makeStyles-inputField-14"
                id="dashboard-title"
                type="text"
                value="Untitled Dashboard"
              />
            </div>
            <p
              class="MuiFormHelperText-root makeStyles-helperText-13 MuiFormHelperText-contained MuiFormHelperText-filled"
              id="dashboard-title-helper-text"
            >
              Specify the name of the dashboard
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialogActions-root WithStyles(ForwardRef(DialogActions))-root-20 MuiDialogActions-spacing"
  >
    <div
      class="MuiBox-root MuiBox-root-22 makeStyles-buttonGroup-21"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-focusVisible Mui-focusVisible"
        data-testid="button-create"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          create
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
            style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<CreateNewDashboardModal /> should match snapshot only with dashboard text field 1`] = `
<div
  aria-labelledby="customized-dialog-title"
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root Component-root-29"
    id="customized-dialog-title"
  >
    <div
      class="MuiBox-root MuiBox-root-31 Component-titleContainer-30"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        New Dashboard
      </h5>
      <button
        aria-label="close"
        class="MuiButtonBase-root MuiIconButton-root"
        data-testid="button-icon-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiDialogContent-root WithStyles(ForwardRef(DialogContent))-root-32 MuiDialogContent-dividers"
  >
    <div
      class="MuiBox-root MuiBox-root-33 makeStyles-addProjectModal-28"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-grid-xl-12"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
        >
          <div
            class="MuiBox-root MuiBox-root-39 makeStyles-labelContainer-37"
          >
            <label
              class="makeStyles-label-38"
              for="dashboard-title"
            >
              Dashboard Title
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="dashboard-title-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input makeStyles-inputField-35"
                id="dashboard-title"
                type="text"
                value="Untitled Dashboard"
              />
            </div>
            <p
              class="MuiFormHelperText-root makeStyles-helperText-34 MuiFormHelperText-contained MuiFormHelperText-filled"
              id="dashboard-title-helper-text"
            >
              Specify the name of the dashboard
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialogActions-root WithStyles(ForwardRef(DialogActions))-root-40 MuiDialogActions-spacing"
  >
    <div
      class="MuiBox-root MuiBox-root-42 makeStyles-buttonGroup-41"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-focusVisible Mui-focusVisible"
        data-testid="button-create"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          create
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
            style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
